tests/ImportTests/data/ImportAsNameClashTest.stderr.expect
./data/ImportAsNameClashTest.xpl:3:8: error: identifier 'x' previously declared at 1:9
./data/ImportAsNameClashTest.xpl:error: input contains errors
