tests/ImportTests/data/ImportAsNameClashTest.xpl
integer x = 0;

import test.hello.hello_world as x;

node[] main() {
  x;
}
